initial commit with home and blog only

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,11 +1,11 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "http://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
-  avatar      : "bio-photo-2.jpg"
+  name        : "Sanzid Kawsar"
+  uri         : "https://sanzidikawsar.github.io"
+  email       : "sanzid.me@gmail.com"
+  bio         : "PhD candidate and researcher at King Abdulaziz University specializing in Machine Learning, NLP, and Generative AI, with prior experience as a University Faculty."
+  avatar      : "profile.png"
   twitter     : "name"
   google_plus : "Name"
 
