--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,12 +2,12 @@
 
 Name Name:
   name        : "Sanzid Kawsar"
-  uri         : "https://sanzidikawsar.github.io"
+  uri         : "https://sanzidkawsar.com"
   email       : "sanzid.me@gmail.com"
   bio         : "PhD candidate and researcher at King Abdulaziz University specializing in Machine Learning, NLP, and Generative AI, with prior experience as a University Faculty."
   avatar      : "profile.png"
-  twitter     : "name"
-  google_plus : "Name"
+  twitter     : "sanzidikawsar"
+  # google_plus : "Name"
 
 Name2 Name2:
   name        : "Name2 Name2"
