favicon and font updated

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   # Biographic information
   avatar           : "profile.png"
   name             : "Md. Sanzidul Islam"
-  pronouns         : "nickname: Sanzid & Kawsar" 
+  pronouns         : "nickname: Sanzid or Kawsar" 
   bio              : "PhD candidate and researcher at King Abdulaziz University specializing in Machine Learning, NLP, and Generative AI, with prior experience as a University Faculty."
   location         : "Dhaka, Bangladesh"
   employer         : "PhD Candidate, KAU, Saudi Arabia"
