--- a/_config.yml
+++ b/_config.yml
@@ -36,11 +36,11 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.com/citations?user=m0eRuEoAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "https://orcid.org/my-orcid?orcid=0000-0002-9563-2419"
+  orcid            : "https://orcid.org/0000-0002-9563-2419"
   # semantic         : # URL
   # pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   # researchgate     : # URL
-  # scopus           : # URL
+  scopus           : "https://www.scopus.com/authid/detail.uri?authorId=57205019523"
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
@@ -51,7 +51,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  # bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : "https://bsky.app/profile/sanzidikawsar.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
@@ -61,14 +61,14 @@ author:
   instagram        : # Username
   lastfm           : # Username
   linkedin         : "sanzidikawsar"
-  mastodon         : # URL
+  mastodon         : "https://mastodon.social/@sanzidikawsar"
   medium           : # URL
   pinterest        : # Username
   soundcloud       : # Username
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : # Username
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
@@ -124,7 +124,7 @@ atom_feed:
 
 
 # SEO Related
-google_site_verification :
+google_site_verification : "kTMEtiZ7FMQtbUG-XmyTGtTzFHnpT3dgrqBgo6_-VBo"
 bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
